# impactor

./: .env.example  .env.local.example  .gitignore  README.md  impactor.db  pyproject.toml  requirements.txt
ace/: context_engine.py
ame/: application_mapping_engine.py  confidence_scoring.py
attack_surface/: generator.py
cli/: main.py
core/ai/: __init__.py  code_context.py  local_stub_provider.py  manager.py  ollama_provider.py  openai_provider.py  provider.py
core/config/: config_loader.py  env_loader.py
core/events/: event_bus.py
core/manifests/: manifest_loader.py
core/models/: __init__.py  application.py  asset.py  attack_path.py  attack_surface.py  evidence.py  finding.py  fix_recommendation.py  manifest.py  mapping.py  repository.py
core/orchestration/: orchestrator.py
core/plugins/: __init__.py  base.py
core/registry/: plugin_registry.py
core/risk/: __init__.py  prioritization_engine.py
core/storage/: __init__.py  base.py  sqlite_provider.py  storage_manager.py
discovery/: repository_discovery.py
docs/: architecture.md
graph/: evidence_graph.py
scanners/semgrep/: plugin.py
scanners/snyk/: plugin.py
tests/: test_prioritization_engine.py  test_snyk_plugin.py
