[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "impactor"
version = "0.0.0"
description = "Impcator - plugin-first local-first ASEM"
readme = "README.md"
requires-python = ">=3.11"
authors = [ { name = "Evan Lewis" } ]

dependencies = [
  "python-dotenv==1.2.2",
  "requests==2.34.2",
  "pydantic==2.13.4",
  "typer==0.26.7",
  "PyYAML==6.0.3",
  "networkx==3.6.1",
  "SQLAlchemy==2.0.50",
]

[project.scripts]
impcator = "cli.main:app"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests", "test*"]
